See if pip installed

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -7,5 +7,5 @@ jobs:
     steps:
       - checkout
       - run: conda install python=3.6
-      - run: pip install aiohttp<3.0,>=2.0
-      - run: pip install --requirement requirements-dev.txt
+      - run: which conda
+      - run: which pip
