--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -11,6 +11,7 @@ jobs:
       - run: ./build-scripts/create-envfile.sh
       - run: python setup.py sdist
       - persist_to_workspace:
+          root: .
           paths:
             - dist
 
