--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -20,9 +20,11 @@ jobs:
       - image: continuumio/miniconda3:latest
     working_directory: ~/repo
     steps:
+      - checkout
       - attach_workspace:
           at: dist
       - run: conda env update --name root --file dist/environment.yml
+      - run: pip install --upgrade pip
       - run: pip install --requirement requirements-dev.txt dist/aiostorage-0.1.2.tar.gz
       - run: pytest
 
