--- a/setup.cfg
+++ b/setup.cfg
@@ -1,6 +1,8 @@
 [flake8]
 exclude = scripts,docs
 max-line-length = 79
+import-order-style = smarkets
+application-import-names = aiostorage
 
 [tool:pytest]
 addopts = -vv
