--- a/setup.cfg
+++ b/setup.cfg
@@ -2,6 +2,7 @@
 exclude = scripts,docs
 max-line-length = 79
 import-order-style = smarkets
+application-import-names = aiostorage
 
 [tool:pytest]
 addopts = -vv
