Add checkout for build script to upload to PyPI

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -33,6 +33,7 @@ jobs:
   pypi:
     <<: *defaults
     steps:
+      - checkout
       - attach_workspace:
           at: dist
       - run: pip install --upgrade pip
