--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -18,7 +18,7 @@ jobs:
           paths:
             - .
 
-  unit-test:
+  test:
     <<: *defaults
     steps:
       - checkout
@@ -45,7 +45,7 @@ workflows:
   build-test-pypi:
     jobs:
       - build
-      - unit-test:
+      - test:
           requires:
             - build
       - pypi:
