--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -30,6 +30,18 @@ jobs:
       - run: flake8
       - run: pytest
 
+  api-test:
+    <<: *defaults
+    steps:
+      - checkout
+      - attach_workspace
+          at: dist
+      - run: conda env update --name root --file dist/environment.yml
+      - run: pip install --upgrade pip
+      - run: pip install --requirement requirements-dev.txt dist/*.tar.gz
+      - run: echo $'[pytest]\naddopts = -vv -k tests/providers/apis' > custom.ini
+      - run: pytest -c custom.ini
+
   pypi:
     <<: *defaults
     steps:
@@ -48,6 +60,12 @@ workflows:
       - unit-test:
           requires:
             - build
+      - api-test:
+          requires:
+            - unit-test
+          filters:
+            branches:
+              only: master
       - pypi:
           requires:
             - unit-test
