--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -11,7 +11,7 @@ jobs:
     steps:
       - checkout
       - run: conda install python=3.6
-      - run: ./build-scripts/create-envfile.sh
+      - run: build-scripts/create-envfile.sh
       - run: python setup.py sdist
       - persist_to_workspace:
           root: dist
@@ -50,7 +50,7 @@ jobs:
           at: dist
       - run: pip install --upgrade pip
       - run: pip install twine
-      - run: ./build-scripts/upload-project.sh
+      - run: build-scripts/upload-project.sh
 
 workflows:
   version: 2
