--- a/setup.cfg
+++ b/setup.cfg
@@ -5,4 +5,4 @@ import-order-style = smarkets
 application-import-names = aiostorage
 
 [tool:pytest]
-addopts = -vv --ignore=tests/providers/apis/
+addopts = -vv --ignore=tests/providers/apis/ --cov=aiostorage tests/
