--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -39,11 +39,8 @@ jobs:
       - run:
           name: Unit tests
           command: pytest
-      - run:
-          name: Unit test coverage
-          command: codecov
 
-  provider-api-test:
+  unit-test-provider-api-test:
     <<: *defaults
     steps:
       - checkout
@@ -54,10 +51,13 @@ jobs:
           command: build-scripts/build-env.sh
       - run:
           name: Create pytest configuration
-          command: echo $'[pytest]\naddopts = -vv -k tests/providers/apis' > custom.ini
+          command: echo $'[pytest]\naddopts = -vv --cov=aiostorage tests/' > custom.ini
       - run:
-          name: Provider API tests
+          name: All tests
           command: pytest -c custom.ini
+      - run:
+          name: Full test coverage
+          command: codecov
 
   pypi:
     <<: *defaults
@@ -77,7 +77,7 @@ workflows:
       - unit-test:
           requires:
             - build
-      - provider-api-test:
+      - unit-test-provider-api-test:
           requires:
             - unit-test
           filters:
@@ -85,7 +85,7 @@ workflows:
               only: master
       - pypi:
           requires:
-            - provider-api-test
+            - unit-test-provider-api-test
           filters:
             branches:
               only: master
